Make the chat larger.

--- a/views/index.jade
+++ b/views/index.jade
@@ -28,13 +28,13 @@ html(lang='en')
               span#leave-span
                 b x Leave
       #container.row
-        #channel-panel.col-md-offset-2.col-md-2
+        #channel-panel.col-md-4
           #channel-list.row.not-showing
           #new-channel-input-row.row.not-showing
             textarea#new-channel-input.channel-element(placeholder='Type channel name', rows='1', maxlength='20')
           .row
             img#add-channel-image(src="/img/add-channel-image.png")
-        #chat-window.col-md-4.with-shadow
+        #chat-window.col-md-7.with-shadow
           #message-list.row.disconnected
           #typing-row.row.disconnected
             p#typing-placeholder
